Tp_final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARCHIVO
    COLON
    CON
    DASH
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> programa
Rule 1     programa -> definiciones instrucciones
Rule 2     definiciones -> definiciones definicion
Rule 3     definiciones -> definicion
Rule 4     definiciones -> empty
Rule 5     definicion -> GRUPO ID LBRACE servidores RBRACE
Rule 6     servidores -> servidores servidor
Rule 7     servidores -> servidor
Rule 8     servidor -> SERVIDOR STRING DIRECCION EQUALS STRING
Rule 9     instrucciones -> instrucciones instruccion
Rule 10    instrucciones -> instruccion
Rule 11    instrucciones -> empty
Rule 12    instruccion -> despliegue
Rule 13    instruccion -> asignacion
Rule 14    instruccion -> bucle
Rule 15    instruccion -> condicional
Rule 16    asignacion -> VAR ID EQUALS valor
Rule 17    valor -> STRING
Rule 18    valor -> NUMBER
Rule 19    despliegue -> DESPLEGAR ID EN ID LBRACE acciones RBRACE
Rule 20    acciones -> acciones accion
Rule 21    acciones -> accion
Rule 22    accion -> PAQUETE STRING DEBE_ESTAR_INSTALADO
Rule 23    accion -> SERVICIO STRING DEBE_ESTAR_EN_EJECUCION
Rule 24    accion -> COPIAR_DESDE origen HACIA destino
Rule 25    accion -> EJECUTAR STRING
Rule 26    origen -> STRING
Rule 27    origen -> ID
Rule 28    destino -> STRING
Rule 29    destino -> ID
Rule 30    condicional -> SI LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE
Rule 31    condicional -> SI LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE SINO LBRACE acciones RBRACE
Rule 32    bucle -> MIENTRAS LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE
Rule 33    condicion -> ID NEQ valor
Rule 34    condicion -> ID EQ valor
Rule 35    condicion -> ID GT valor
Rule 36    condicion -> ID LT valor
Rule 37    condicion -> NO_EXISTE ID
Rule 38    empty -> <empty>

Terminals, with rules where they appear

ARCHIVO              : 
COLON                : 
CON                  : 
COPIAR_DESDE         : 24
DASH                 : 
DEBE_ESTAR_EN_EJECUCION : 23
DEBE_ESTAR_INSTALADO : 22
DESPLEGAR            : 19
DIRECCION            : 8
EJECUTAR             : 25
EN                   : 19
EQ                   : 34
EQUALS               : 8 16
GRUPO                : 5
GT                   : 35
HACER                : 30 31 32
HACIA                : 24
ID                   : 5 16 19 19 27 29 33 34 35 36 37
LBRACE               : 5 19 30 31 31 32
LBRACKET             : 
LPAREN               : 30 31 32
LT                   : 36
MIENTRAS             : 32
NEQ                  : 33
NO_EXISTE            : 37
NUMBER               : 18
PAQUETE              : 22
RBRACE               : 5 19 30 31 31 32
RBRACKET             : 
RPAREN               : 30 31 32
SERVICIO             : 23
SERVIDOR             : 8
SI                   : 30 31
SINO                 : 31
STRING               : 8 8 17 22 23 25 26 28
VAR                  : 16
VERIFICAR            : 30 31 32
error                : 

Nonterminals, with rules where they appear

accion               : 20 21
acciones             : 19 20 30 31 31 32
asignacion           : 13
bucle                : 14
condicion            : 30 31 32
condicional          : 15
definicion           : 2 3
definiciones         : 1 2
despliegue           : 12
destino              : 24
empty                : 4 11
instruccion          : 9 10
instrucciones        : 1 9
origen               : 24
programa             : 0
servidor             : 6 7
servidores           : 5 6
valor                : 16 33 34 35 36

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . definiciones instrucciones
    (2) definiciones -> . definiciones definicion
    (3) definiciones -> . definicion
    (4) definiciones -> . empty
    (5) definicion -> . GRUPO ID LBRACE servidores RBRACE
    (38) empty -> .

  ! shift/reduce conflict for GRUPO resolved as shift
    GRUPO           shift and go to state 5
    DESPLEGAR       reduce using rule 38 (empty -> .)
    VAR             reduce using rule 38 (empty -> .)
    MIENTRAS        reduce using rule 38 (empty -> .)
    SI              reduce using rule 38 (empty -> .)
    $end            reduce using rule 38 (empty -> .)

  ! GRUPO           [ reduce using rule 38 (empty -> .) ]

    programa                       shift and go to state 1
    definiciones                   shift and go to state 2
    definicion                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> definiciones . instrucciones
    (2) definiciones -> definiciones . definicion
    (9) instrucciones -> . instrucciones instruccion
    (10) instrucciones -> . instruccion
    (11) instrucciones -> . empty
    (5) definicion -> . GRUPO ID LBRACE servidores RBRACE
    (12) instruccion -> . despliegue
    (13) instruccion -> . asignacion
    (14) instruccion -> . bucle
    (15) instruccion -> . condicional
    (38) empty -> .
    (19) despliegue -> . DESPLEGAR ID EN ID LBRACE acciones RBRACE
    (16) asignacion -> . VAR ID EQUALS valor
    (32) bucle -> . MIENTRAS LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE
    (30) condicional -> . SI LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE
    (31) condicional -> . SI LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE SINO LBRACE acciones RBRACE

  ! shift/reduce conflict for DESPLEGAR resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
  ! shift/reduce conflict for SI resolved as shift
    GRUPO           shift and go to state 5
    $end            reduce using rule 38 (empty -> .)
    DESPLEGAR       shift and go to state 14
    VAR             shift and go to state 15
    MIENTRAS        shift and go to state 16
    SI              shift and go to state 17

  ! DESPLEGAR       [ reduce using rule 38 (empty -> .) ]
  ! VAR             [ reduce using rule 38 (empty -> .) ]
  ! MIENTRAS        [ reduce using rule 38 (empty -> .) ]
  ! SI              [ reduce using rule 38 (empty -> .) ]

    instrucciones                  shift and go to state 6
    definicion                     shift and go to state 7
    instruccion                    shift and go to state 8
    empty                          shift and go to state 9
    despliegue                     shift and go to state 10
    asignacion                     shift and go to state 11
    bucle                          shift and go to state 12
    condicional                    shift and go to state 13

state 3

    (3) definiciones -> definicion .

    GRUPO           reduce using rule 3 (definiciones -> definicion .)
    DESPLEGAR       reduce using rule 3 (definiciones -> definicion .)
    VAR             reduce using rule 3 (definiciones -> definicion .)
    MIENTRAS        reduce using rule 3 (definiciones -> definicion .)
    SI              reduce using rule 3 (definiciones -> definicion .)
    $end            reduce using rule 3 (definiciones -> definicion .)


state 4

    (4) definiciones -> empty .

    GRUPO           reduce using rule 4 (definiciones -> empty .)
    DESPLEGAR       reduce using rule 4 (definiciones -> empty .)
    VAR             reduce using rule 4 (definiciones -> empty .)
    MIENTRAS        reduce using rule 4 (definiciones -> empty .)
    SI              reduce using rule 4 (definiciones -> empty .)
    $end            reduce using rule 4 (definiciones -> empty .)


state 5

    (5) definicion -> GRUPO . ID LBRACE servidores RBRACE

    ID              shift and go to state 18


state 6

    (1) programa -> definiciones instrucciones .
    (9) instrucciones -> instrucciones . instruccion
    (12) instruccion -> . despliegue
    (13) instruccion -> . asignacion
    (14) instruccion -> . bucle
    (15) instruccion -> . condicional
    (19) despliegue -> . DESPLEGAR ID EN ID LBRACE acciones RBRACE
    (16) asignacion -> . VAR ID EQUALS valor
    (32) bucle -> . MIENTRAS LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE
    (30) condicional -> . SI LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE
    (31) condicional -> . SI LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE SINO LBRACE acciones RBRACE

    $end            reduce using rule 1 (programa -> definiciones instrucciones .)
    DESPLEGAR       shift and go to state 14
    VAR             shift and go to state 15
    MIENTRAS        shift and go to state 16
    SI              shift and go to state 17

    instruccion                    shift and go to state 19
    despliegue                     shift and go to state 10
    asignacion                     shift and go to state 11
    bucle                          shift and go to state 12
    condicional                    shift and go to state 13

state 7

    (2) definiciones -> definiciones definicion .

    GRUPO           reduce using rule 2 (definiciones -> definiciones definicion .)
    DESPLEGAR       reduce using rule 2 (definiciones -> definiciones definicion .)
    VAR             reduce using rule 2 (definiciones -> definiciones definicion .)
    MIENTRAS        reduce using rule 2 (definiciones -> definiciones definicion .)
    SI              reduce using rule 2 (definiciones -> definiciones definicion .)
    $end            reduce using rule 2 (definiciones -> definiciones definicion .)


state 8

    (10) instrucciones -> instruccion .

    DESPLEGAR       reduce using rule 10 (instrucciones -> instruccion .)
    VAR             reduce using rule 10 (instrucciones -> instruccion .)
    MIENTRAS        reduce using rule 10 (instrucciones -> instruccion .)
    SI              reduce using rule 10 (instrucciones -> instruccion .)
    $end            reduce using rule 10 (instrucciones -> instruccion .)


state 9

    (11) instrucciones -> empty .

    DESPLEGAR       reduce using rule 11 (instrucciones -> empty .)
    VAR             reduce using rule 11 (instrucciones -> empty .)
    MIENTRAS        reduce using rule 11 (instrucciones -> empty .)
    SI              reduce using rule 11 (instrucciones -> empty .)
    $end            reduce using rule 11 (instrucciones -> empty .)


state 10

    (12) instruccion -> despliegue .

    DESPLEGAR       reduce using rule 12 (instruccion -> despliegue .)
    VAR             reduce using rule 12 (instruccion -> despliegue .)
    MIENTRAS        reduce using rule 12 (instruccion -> despliegue .)
    SI              reduce using rule 12 (instruccion -> despliegue .)
    $end            reduce using rule 12 (instruccion -> despliegue .)


state 11

    (13) instruccion -> asignacion .

    DESPLEGAR       reduce using rule 13 (instruccion -> asignacion .)
    VAR             reduce using rule 13 (instruccion -> asignacion .)
    MIENTRAS        reduce using rule 13 (instruccion -> asignacion .)
    SI              reduce using rule 13 (instruccion -> asignacion .)
    $end            reduce using rule 13 (instruccion -> asignacion .)


state 12

    (14) instruccion -> bucle .

    DESPLEGAR       reduce using rule 14 (instruccion -> bucle .)
    VAR             reduce using rule 14 (instruccion -> bucle .)
    MIENTRAS        reduce using rule 14 (instruccion -> bucle .)
    SI              reduce using rule 14 (instruccion -> bucle .)
    $end            reduce using rule 14 (instruccion -> bucle .)


state 13

    (15) instruccion -> condicional .

    DESPLEGAR       reduce using rule 15 (instruccion -> condicional .)
    VAR             reduce using rule 15 (instruccion -> condicional .)
    MIENTRAS        reduce using rule 15 (instruccion -> condicional .)
    SI              reduce using rule 15 (instruccion -> condicional .)
    $end            reduce using rule 15 (instruccion -> condicional .)


state 14

    (19) despliegue -> DESPLEGAR . ID EN ID LBRACE acciones RBRACE

    ID              shift and go to state 20


state 15

    (16) asignacion -> VAR . ID EQUALS valor

    ID              shift and go to state 21


state 16

    (32) bucle -> MIENTRAS . LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE

    LPAREN          shift and go to state 22


state 17

    (30) condicional -> SI . LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE
    (31) condicional -> SI . LPAREN VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE SINO LBRACE acciones RBRACE

    LPAREN          shift and go to state 23


state 18

    (5) definicion -> GRUPO ID . LBRACE servidores RBRACE

    LBRACE          shift and go to state 24


state 19

    (9) instrucciones -> instrucciones instruccion .

    DESPLEGAR       reduce using rule 9 (instrucciones -> instrucciones instruccion .)
    VAR             reduce using rule 9 (instrucciones -> instrucciones instruccion .)
    MIENTRAS        reduce using rule 9 (instrucciones -> instrucciones instruccion .)
    SI              reduce using rule 9 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 9 (instrucciones -> instrucciones instruccion .)


state 20

    (19) despliegue -> DESPLEGAR ID . EN ID LBRACE acciones RBRACE

    EN              shift and go to state 25


state 21

    (16) asignacion -> VAR ID . EQUALS valor

    EQUALS          shift and go to state 26


state 22

    (32) bucle -> MIENTRAS LPAREN . VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE

    VERIFICAR       shift and go to state 27


state 23

    (30) condicional -> SI LPAREN . VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE
    (31) condicional -> SI LPAREN . VERIFICAR condicion RPAREN HACER LBRACE acciones RBRACE SINO LBRACE acciones RBRACE

    VERIFICAR       shift and go to state 28


state 24

    (5) definicion -> GRUPO ID LBRACE . servidores RBRACE
    (6) servidores -> . servidores servidor
    (7) servidores -> . servidor
    (8) servidor -> . SERVIDOR STRING DIRECCION EQUALS STRING

    SERVIDOR        shift and go to state 31

    servidores                     shift and go to state 29
    servidor                       shift and go to state 30

state 25

    (19) despliegue -> DESPLEGAR ID EN . ID LBRACE acciones RBRACE

    ID              shift and go to state 32


state 26

    (16) asignacion -> VAR ID EQUALS . valor
    (17) valor -> . STRING
    (18) valor -> . NUMBER

    STRING          shift and go to state 34
    NUMBER          shift and go to state 35

    valor                          shift and go to state 33

state 27

    (32) bucle -> MIENTRAS LPAREN VERIFICAR . condicion RPAREN HACER LBRACE acciones RBRACE
    (33) condicion -> . ID NEQ valor
    (34) condicion -> . ID EQ valor
    (35) condicion -> . ID GT valor
    (36) condicion -> . ID LT valor
    (37) condicion -> . NO_EXISTE ID

    ID              shift and go to state 37
    NO_EXISTE       shift and go to state 38

    condicion                      shift and go to state 36

state 28

    (30) condicional -> SI LPAREN VERIFICAR . condicion RPAREN HACER LBRACE acciones RBRACE
    (31) condicional -> SI LPAREN VERIFICAR . condicion RPAREN HACER LBRACE acciones RBRACE SINO LBRACE acciones RBRACE
    (33) condicion -> . ID NEQ valor
    (34) condicion -> . ID EQ valor
    (35) condicion -> . ID GT valor
    (36) condicion -> . ID LT valor
    (37) condicion -> . NO_EXISTE ID

    ID              shift and go to state 37
    NO_EXISTE       shift and go to state 38

    condicion                      shift and go to state 39

state 29

    (5) definicion -> GRUPO ID LBRACE servidores . RBRACE
    (6) servidores -> servidores . servidor
    (8) servidor -> . SERVIDOR STRING DIRECCION EQUALS STRING

    RBRACE          shift and go to state 40
    SERVIDOR        shift and go to state 31

    servidor                       shift and go to state 41

state 30

    (7) servidores -> servidor .

    RBRACE          reduce using rule 7 (servidores -> servidor .)
    SERVIDOR        reduce using rule 7 (servidores -> servidor .)


state 31

    (8) servidor -> SERVIDOR . STRING DIRECCION EQUALS STRING

    STRING          shift and go to state 42


state 32

    (19) despliegue -> DESPLEGAR ID EN ID . LBRACE acciones RBRACE

    LBRACE          shift and go to state 43


state 33

    (16) asignacion -> VAR ID EQUALS valor .

    DESPLEGAR       reduce using rule 16 (asignacion -> VAR ID EQUALS valor .)
    VAR             reduce using rule 16 (asignacion -> VAR ID EQUALS valor .)
    MIENTRAS        reduce using rule 16 (asignacion -> VAR ID EQUALS valor .)
    SI              reduce using rule 16 (asignacion -> VAR ID EQUALS valor .)
    $end            reduce using rule 16 (asignacion -> VAR ID EQUALS valor .)


state 34

    (17) valor -> STRING .

    DESPLEGAR       reduce using rule 17 (valor -> STRING .)
    VAR             reduce using rule 17 (valor -> STRING .)
    MIENTRAS        reduce using rule 17 (valor -> STRING .)
    SI              reduce using rule 17 (valor -> STRING .)
    $end            reduce using rule 17 (valor -> STRING .)
    RPAREN          reduce using rule 17 (valor -> STRING .)


state 35

    (18) valor -> NUMBER .

    DESPLEGAR       reduce using rule 18 (valor -> NUMBER .)
    VAR             reduce using rule 18 (valor -> NUMBER .)
    MIENTRAS        reduce using rule 18 (valor -> NUMBER .)
    SI              reduce using rule 18 (valor -> NUMBER .)
    $end            reduce using rule 18 (valor -> NUMBER .)
    RPAREN          reduce using rule 18 (valor -> NUMBER .)


state 36

    (32) bucle -> MIENTRAS LPAREN VERIFICAR condicion . RPAREN HACER LBRACE acciones RBRACE

    RPAREN          shift and go to state 44


state 37

    (33) condicion -> ID . NEQ valor
    (34) condicion -> ID . EQ valor
    (35) condicion -> ID . GT valor
    (36) condicion -> ID . LT valor

    NEQ             shift and go to state 45
    EQ              shift and go to state 46
    GT              shift and go to state 47
    LT              shift and go to state 48


state 38

    (37) condicion -> NO_EXISTE . ID

    ID              shift and go to state 49


state 39

    (30) condicional -> SI LPAREN VERIFICAR condicion . RPAREN HACER LBRACE acciones RBRACE
    (31) condicional -> SI LPAREN VERIFICAR condicion . RPAREN HACER LBRACE acciones RBRACE SINO LBRACE acciones RBRACE

    RPAREN          shift and go to state 50


state 40

    (5) definicion -> GRUPO ID LBRACE servidores RBRACE .

    GRUPO           reduce using rule 5 (definicion -> GRUPO ID LBRACE servidores RBRACE .)
    DESPLEGAR       reduce using rule 5 (definicion -> GRUPO ID LBRACE servidores RBRACE .)
    VAR             reduce using rule 5 (definicion -> GRUPO ID LBRACE servidores RBRACE .)
    MIENTRAS        reduce using rule 5 (definicion -> GRUPO ID LBRACE servidores RBRACE .)
    SI              reduce using rule 5 (definicion -> GRUPO ID LBRACE servidores RBRACE .)
    $end            reduce using rule 5 (definicion -> GRUPO ID LBRACE servidores RBRACE .)


state 41

    (6) servidores -> servidores servidor .

    RBRACE          reduce using rule 6 (servidores -> servidores servidor .)
    SERVIDOR        reduce using rule 6 (servidores -> servidores servidor .)


state 42

    (8) servidor -> SERVIDOR STRING . DIRECCION EQUALS STRING

    DIRECCION       shift and go to state 51


state 43

    (19) despliegue -> DESPLEGAR ID EN ID LBRACE . acciones RBRACE
    (20) acciones -> . acciones accion
    (21) acciones -> . accion
    (22) accion -> . PAQUETE STRING DEBE_ESTAR_INSTALADO
    (23) accion -> . SERVICIO STRING DEBE_ESTAR_EN_EJECUCION
    (24) accion -> . COPIAR_DESDE origen HACIA destino
    (25) accion -> . EJECUTAR STRING

    PAQUETE         shift and go to state 54
    SERVICIO        shift and go to state 55
    COPIAR_DESDE    shift and go to state 56
    EJECUTAR        shift and go to state 57

    acciones                       shift and go to state 52
    accion                         shift and go to state 53

state 44

    (32) bucle -> MIENTRAS LPAREN VERIFICAR condicion RPAREN . HACER LBRACE acciones RBRACE

    HACER           shift and go to state 58


state 45

    (33) condicion -> ID NEQ . valor
    (17) valor -> . STRING
    (18) valor -> . NUMBER

    STRING          shift and go to state 34
    NUMBER          shift and go to state 35

    valor                          shift and go to state 59

state 46

    (34) condicion -> ID EQ . valor
    (17) valor -> . STRING
    (18) valor -> . NUMBER

    STRING          shift and go to state 34
    NUMBER          shift and go to state 35

    valor                          shift and go to state 60

state 47

    (35) condicion -> ID GT . valor
    (17) valor -> . STRING
    (18) valor -> . NUMBER

    STRING          shift and go to state 34
    NUMBER          shift and go to state 35

    valor                          shift and go to state 61

state 48

    (36) condicion -> ID LT . valor
    (17) valor -> . STRING
    (18) valor -> . NUMBER

    STRING          shift and go to state 34
    NUMBER          shift and go to state 35

    valor                          shift and go to state 62

state 49

    (37) condicion -> NO_EXISTE ID .

    RPAREN          reduce using rule 37 (condicion -> NO_EXISTE ID .)


state 50

    (30) condicional -> SI LPAREN VERIFICAR condicion RPAREN . HACER LBRACE acciones RBRACE
    (31) condicional -> SI LPAREN VERIFICAR condicion RPAREN . HACER LBRACE acciones RBRACE SINO LBRACE acciones RBRACE

    HACER           shift and go to state 63


state 51

    (8) servidor -> SERVIDOR STRING DIRECCION . EQUALS STRING

    EQUALS          shift and go to state 64


state 52

    (19) despliegue -> DESPLEGAR ID EN ID LBRACE acciones . RBRACE
    (20) acciones -> acciones . accion
    (22) accion -> . PAQUETE STRING DEBE_ESTAR_INSTALADO
    (23) accion -> . SERVICIO STRING DEBE_ESTAR_EN_EJECUCION
    (24) accion -> . COPIAR_DESDE origen HACIA destino
    (25) accion -> . EJECUTAR STRING

    RBRACE          shift and go to state 65
    PAQUETE         shift and go to state 54
    SERVICIO        shift and go to state 55
    COPIAR_DESDE    shift and go to state 56
    EJECUTAR        shift and go to state 57

    accion                         shift and go to state 66

state 53

    (21) acciones -> accion .

    RBRACE          reduce using rule 21 (acciones -> accion .)
    PAQUETE         reduce using rule 21 (acciones -> accion .)
    SERVICIO        reduce using rule 21 (acciones -> accion .)
    COPIAR_DESDE    reduce using rule 21 (acciones -> accion .)
    EJECUTAR        reduce using rule 21 (acciones -> accion .)


state 54

    (22) accion -> PAQUETE . STRING DEBE_ESTAR_INSTALADO

    STRING          shift and go to state 67


state 55

    (23) accion -> SERVICIO . STRING DEBE_ESTAR_EN_EJECUCION

    STRING          shift and go to state 68


state 56

    (24) accion -> COPIAR_DESDE . origen HACIA destino
    (26) origen -> . STRING
    (27) origen -> . ID

    STRING          shift and go to state 70
    ID              shift and go to state 71

    origen                         shift and go to state 69

state 57

    (25) accion -> EJECUTAR . STRING

    STRING          shift and go to state 72


state 58

    (32) bucle -> MIENTRAS LPAREN VERIFICAR condicion RPAREN HACER . LBRACE acciones RBRACE

    LBRACE          shift and go to state 73


state 59

    (33) condicion -> ID NEQ valor .

    RPAREN          reduce using rule 33 (condicion -> ID NEQ valor .)


state 60

    (34) condicion -> ID EQ valor .

    RPAREN          reduce using rule 34 (condicion -> ID EQ valor .)


state 61

    (35) condicion -> ID GT valor .

    RPAREN          reduce using rule 35 (condicion -> ID GT valor .)


state 62

    (36) condicion -> ID LT valor .

    RPAREN          reduce using rule 36 (condicion -> ID LT valor .)


state 63

    (30) condicional -> SI LPAREN VERIFICAR condicion RPAREN HACER . LBRACE acciones RBRACE
    (31) condicional -> SI LPAREN VERIFICAR condicion RPAREN HACER . LBRACE acciones RBRACE SINO LBRACE acciones RBRACE

    LBRACE          shift and go to state 74


state 64

    (8) servidor -> SERVIDOR STRING DIRECCION EQUALS . STRING

    STRING          shift and go to state 75


state 65

    (19) despliegue -> DESPLEGAR ID EN ID LBRACE acciones RBRACE .

    DESPLEGAR       reduce using rule 19 (despliegue -> DESPLEGAR ID EN ID LBRACE acciones RBRACE .)
    VAR             reduce using rule 19 (despliegue -> DESPLEGAR ID EN ID LBRACE acciones RBRACE .)
    MIENTRAS        reduce using rule 19 (despliegue -> DESPLEGAR ID EN ID LBRACE acciones RBRACE .)
    SI              reduce using rule 19 (despliegue -> DESPLEGAR ID EN ID LBRACE acciones RBRACE .)
    $end            reduce using rule 19 (despliegue -> DESPLEGAR ID EN ID LBRACE acciones RBRACE .)


state 66

    (20) acciones -> acciones accion .

    RBRACE          reduce using rule 20 (acciones -> acciones accion .)
    PAQUETE         reduce using rule 20 (acciones -> acciones accion .)
    SERVICIO        reduce using rule 20 (acciones -> acciones accion .)
    COPIAR_DESDE    reduce using rule 20 (acciones -> acciones accion .)
    EJECUTAR        reduce using rule 20 (acciones -> acciones accion .)


state 67

    (22) accion -> PAQUETE STRING . DEBE_ESTAR_INSTALADO

    DEBE_ESTAR_INSTALADO shift and go to state 76


state 68

    (23) accion -> SERVICIO STRING . DEBE_ESTAR_EN_EJECUCION

    DEBE_ESTAR_EN_EJECUCION shift and go to state 77


state 69

    (24) accion -> COPIAR_DESDE origen . HACIA destino

    HACIA           shift and go to state 78


state 70

    (26) origen -> STRING .

    HACIA           reduce using rule 26 (origen -> STRING .)


state 71

    (27) origen -> ID .

    HACIA           reduce using rule 27 (origen -> ID .)


state 72

    (25) accion -> EJECUTAR STRING .

    RBRACE          reduce using rule 25 (accion -> EJECUTAR STRING .)
    PAQUETE         reduce using rule 25 (accion -> EJECUTAR STRING .)
    SERVICIO        reduce using rule 25 (accion -> EJECUTAR STRING .)
    COPIAR_DESDE    reduce using rule 25 (accion -> EJECUTAR STRING .)
    EJECUTAR        reduce using rule 25 (accion -> EJECUTAR STRING .)


state 73

    (32) bucle -> MIENTRAS LPAREN VERIFICAR condicion RPAREN HACER LBRACE . acciones RBRACE
    (20) acciones -> . acciones accion
    (21) acciones -> . accion
    (22) accion -> . PAQUETE STRING DEBE_ESTAR_INSTALADO
    (23) accion -> . SERVICIO STRING DEBE_ESTAR_EN_EJECUCION
    (24) accion -> . COPIAR_DESDE origen HACIA destino
    (25) accion -> . EJECUTAR STRING

    PAQUETE         shift and go to state 54
    SERVICIO        shift and go to state 55
    COPIAR_DESDE    shift and go to state 56
    EJECUTAR        shift and go to state 57

    acciones                       shift and go to state 79
    accion                         shift and go to state 53

state 74

    (30) condicional -> SI LPAREN VERIFICAR condicion RPAREN HACER LBRACE . acciones RBRACE
    (31) condicional -> SI LPAREN VERIFICAR condicion RPAREN HACER LBRACE . acciones RBRACE SINO LBRACE acciones RBRACE
    (20) acciones -> . acciones accion
    (21) acciones -> . accion
    (22) accion -> . PAQUETE STRING DEBE_ESTAR_INSTALADO
    (23) accion -> . SERVICIO STRING DEBE_ESTAR_EN_EJECUCION
    (24) accion -> . COPIAR_DESDE origen HACIA destino
    (25) accion -> . EJECUTAR STRING

    PAQUETE         shift and go to state 54
    SERVICIO        shift and go to state 55
    COPIAR_DESDE    shift and go to state 56
    EJECUTAR        shift and go to state 57

    acciones                       shift and go to state 80
    accion                         shift and go to state 53

state 75
